Initial layout commit.

--- a/MW5 Mod Oganizer WPF/Themes/TextBox/TextBoxGameVersionTheme.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/TextBox/TextBoxGameVersionTheme.xaml
@@ -5,8 +5,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
-                    <Border CornerRadius="5"
-                            Background="White"
+                    <Border Background="White"
                             Width="90"
                             Height="25">
                         <Grid>
