--- a/MW5 Mod Oganizer WPF/MainWindow.xaml
+++ b/MW5 Mod Oganizer WPF/MainWindow.xaml
@@ -6,11 +6,16 @@
         xmlns:dd="clr-namespace:GongSolutions.Wpf.DragDrop;assembly=GongSolutions.Wpf.DragDrop"
         xmlns:local="clr-namespace:MW5_Mod_Organizer_WPF.ViewModels"
         mc:Ignorable="d" FontSize="14"
-        Title="MW5 Mod Organizer" Height="720" Width="1345" Background="#FFBFBCD4" WindowStartupLocation="CenterOwner">
+        Title="MW5 Mod Organizer" Height="720" Width="1345" Background="#FFF5F5F5" WindowStartupLocation="CenterOwner">
+    <Window.Resources>
+        <DataTemplate x:Key="DataGridItemTemplate1">
+            <Grid/>
+        </DataTemplate>
+    </Window.Resources>
     <Grid>
         <!--Grid definitions-->
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="150"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="auto"/>
         </Grid.ColumnDefinitions>
@@ -22,23 +27,38 @@
         </Grid.RowDefinitions>
         
         <!--Layout-->
-        <Rectangle 
+        <!--<Rectangle 
             Grid.Column="0" 
-            Grid.Row="1" 
-            Grid.ColumnSpan="2" 
-            Fill="#FF8C86B5"/>
+            Grid.Row="2" 
+            Grid.RowSpan="2" 
+            Fill="#FFF9F9F9">
+        </Rectangle>
         <Rectangle 
-            Grid.Column="0" 
-            Grid.Row="1" 
-            Grid.RowSpan="5" 
-            Fill="#FF696390"/>
-        
+            Grid.Column="0"
+            Grid.ColumnSpan="2"
+            Grid.Row="1"
+            Fill="#FFF9F9F9">
+        </Rectangle>-->
+        <Border Grid.Column="0" 
+                Grid.Row="2" 
+                Grid.RowSpan="2"
+                Background="Transparent">
+        </Border>
+        <Border Grid.Column="0"
+                Grid.ColumnSpan="2"
+                Grid.Row="1"
+                Background="#FFF9F9F9">
+            <Border.Effect>
+                <DropShadowEffect BlurRadius="10" Color="#FFD8D8D8" ShadowDepth="5" Direction="270" Opacity="0.3"/>
+            </Border.Effect>
+        </Border>
+
         <!--Toolbar menu-->
         <StackPanel Grid.Row="0" 
                     Grid.Column="0" 
                     Grid.ColumnSpan="3" 
                     Orientation="Horizontal"
-                    Background="#FF5D5780">
+                    Background="#FFF9F9F9">
             <Button x:Name="ButtonExport" 
                     Content="Export loadorder"
                     Click="ButtonExport_Click"
@@ -46,14 +66,18 @@
         </StackPanel>
 
         <!--Logo-->
-        <TextBlock Text="Mod Organizer"
+        <TextBlock Text="MW5MO"
                    Grid.Row="1"
                    VerticalAlignment="Center" 
                    HorizontalAlignment="left"
-                   Foreground="#FFBFBCD4"
+                   Foreground="#69717d"
                    FontSize="22"
-                   Margin="20, 0, 0, 0"/>
-        <Separator Grid.Row="1"  Margin="25, 0" VerticalAlignment="Bottom" Height="2" Background="#FF8C86B5"/>
+                   Margin="20, 0, 0, 0"
+                   Visibility="Hidden"/>
+        <Image Source="Images/logo2.png"
+               Grid.Row="1"
+               Height="40"
+               RenderOptions.BitmapScalingMode="Fant"/>
 
         <!--File path-->
         <StackPanel Orientation="Vertical"
@@ -77,7 +101,7 @@
                         VerticalAlignment="Center"
                         Margin="10, 0, 0, 0" 
                         FontSize="14" 
-                        FontWeight="Bold" 
+                        FontWeight="Normal" 
                         Style="{StaticResource StandaloneButtonTheme}"
                         Click="ButtonOpenFolder_Click" Cursor="Hand"/>
             </StackPanel>
@@ -99,7 +123,7 @@
                         VerticalAlignment="Center"
                         Margin="10, 0, 0, 0" 
                         FontSize="14" 
-                        FontWeight="Bold" 
+                        FontWeight="Normal" 
                         Style="{StaticResource StandaloneButtonTheme}"
                         Click="ButtonOpenSecondaryFolder_Click" Cursor="Hand"/>
             </StackPanel>
@@ -108,11 +132,12 @@
         <!--Menu buttons-->
         <StackPanel Grid.Row="2"
                     Grid.RowSpan="2"
-                    Margin="0,10,0,0">
+                    Margin="0,10,0,0"
+                    Visibility="Hidden">
             <Button x:Name="ButtonDeploy" Content="Deploy"
                     Height="50"
                     FontSize="14"
-                    FontWeight="Bold"
+                    FontWeight="Normal"
                     Style="{StaticResource MenuButtonTheme}"
                     Cursor="Hand" 
                     Click="ButtonDeploy_Click"
@@ -120,7 +145,7 @@
             <Button x:Name="ButtonUndo" Content="Undo"
                     Height="50"
                     FontSize="14"
-                    FontWeight="Bold"
+                    FontWeight="Normal"
                     Style="{StaticResource MenuButtonTheme}" 
                     Cursor="Hand" 
                     Click="ButtonUndo_Click"
@@ -129,7 +154,7 @@
                     Content="Clear"
                     Height="50"
                     FontSize="14"
-                    FontWeight="Bold"
+                    FontWeight="Normal"
                     Click="ButtonClearPath_Click"
                     Command="{Binding ClearCommand}"
                     Style="{StaticResource MenuButtonTheme}" Cursor="Hand"/>
@@ -137,14 +162,14 @@
                     Content="Set recovery"
                     Height="50"
                     FontSize="14"
-                    FontWeight="Bold"
+                    FontWeight="Normal"
                     Click="ButtonSetRecovery_Click"
                     Style="{StaticResource MenuButtonTheme}" 
                     Cursor="Hand"/>
             <Button x:Name="ButtonReset" Content="Reset"
                     Height="50"
                     FontSize="14"
-                    FontWeight="Bold"
+                    FontWeight="Normal"
                     Style="{StaticResource MenuButtonTheme}" 
                     Cursor="Hand" 
                     Click="ButtonReset_Click"
@@ -180,7 +205,7 @@
                                MouseLeftButtonDown="ArrowUp_MouseLeftButtonDown">
                         <TextBlock.Style>
                             <Style TargetType="{x:Type TextBlock}">
-                                <Setter Property="Foreground" Value="#FFE6E6E8"/>
+                                <Setter Property="Foreground" Value="#69717d"/>
                                 <Style.Triggers>
                                     <Trigger Property="IsMouseOver" Value="True">
                                         <Setter Property="Foreground" Value="White"/>
@@ -204,7 +229,7 @@
                                MouseLeftButtonDown="ArrowDown_MouseLeftButtonDown">
                         <TextBlock.Style>
                             <Style TargetType="{x:Type TextBlock}">
-                                <Setter Property="Foreground" Value="#FFE6E6E8"/>
+                                <Setter Property="Foreground" Value="#69717d"/>
                                 <Style.Triggers>
                                     <Trigger Property="IsMouseOver" Value="True">
                                         <Setter Property="Foreground" Value="White"/>
@@ -222,17 +247,18 @@
                 Grid.Row="3" 
                 Background="white" 
                 BorderThickness="0" 
-                Margin="10" 
-                CornerRadius="5">
+                Margin="10">
             <DataGrid x:Name="ModList" 
                       ItemsSource="{Binding Mods}"
                       Style="{DynamicResource DataGridStyle1}" 
                       CellStyle="{DynamicResource DataGridCellStyle1}" 
                       ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
-                      RowStyle="{DynamicResource DataGridRowStyle1}" 
+                      RowStyle="{DynamicResource DataGridRowStyle1}"
+                      RowDetailsTemplate="{DynamicResource DataGridRowDetailsTemplate1}"
                       Margin="10" 
                       Background="Transparent" 
                       BorderBrush="Transparent"
+                      BorderThickness="1"
                       dd:DragDrop.IsDragSource="True" 
                       dd:DragDrop.IsDropTarget="True" 
                       dd:DragDrop.SelectDroppedItems="True" 
@@ -277,13 +303,13 @@
         <!--Conflict window-->
         <StackPanel Orientation="Horizontal"
                     Grid.Column="2"
-                    Grid.Row="1"
-                    Grid.RowSpan="3">
+                    Grid.Row="0"
+                    Grid.RowSpan="4">
             <ToggleButton x:Name="ToggleButtonConflictWindow"
                           Click="ToggleButtonConflictWindow_Click"
                           Style="{StaticResource ButtonConflictWindowSlider}"/>
             <Border x:Name="BorderConflictWindow"
-                    Background="#696390"
+                    Background="#FFD6D6D6"
                     Visibility="Collapsed">
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -304,14 +330,13 @@
                                Text="Conflict window"
                                HorizontalAlignment="Center"
                                VerticalAlignment="Center"
-                               Foreground="#FFBFBCD4"
-                               FontWeight="Bold"
+                               Foreground="#69717d"
+                               FontWeight="Normal"
                                Margin="0 10 0 0"/>
                     <!--Overwrites window-->
                     <Border Grid.Row="2"
                             Grid.Column="0"
                             Background="White"
-                            CornerRadius="10"
                             Margin="10 0">
                         <DataGrid x:Name="DataGridOverwrites"
                                   ItemsSource="{Binding Overwrites}"
@@ -337,7 +362,6 @@
                     <Border Grid.Row="4"
                             Grid.Column="0"
                             Background="White"
-                            CornerRadius="10"
                             Margin="10 0">
                         <DataGrid x:Name="DataGridOverwrittenBy"
                                   ItemsSource="{Binding OverwrittenBy}"
@@ -363,7 +387,6 @@
                     <Border Grid.Row="6"
                             Grid.Column="0"
                             Background="White"
-                            CornerRadius="10"
                             Margin="10 0 ">
                         <DataGrid ItemsSource="{Binding Conflicts}" 
                                   Style="{DynamicResource DataGridStyle1}" 
@@ -395,7 +418,8 @@
                    HorizontalAlignment="Left"
                    FontSize="14" 
                    Margin="5, 0, 0, 5" 
-                   Foreground="#FFA19BCA"/>
+                   Foreground="#FFA19BCA"
+                   Visibility="Hidden"/>
     </Grid>
 </Window>
     
