--- a/MW5 Mod Oganizer WPF/Themes/Button/ButtonConflictWindowSliderTheme.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/Button/ButtonConflictWindowSliderTheme.xaml
@@ -4,8 +4,8 @@
            TargetType="{x:Type ToggleButton}">
         <Setter Property="Content" Value="&lt;"/>
         <Setter Property="Width" Value="25"/>
-        <Setter Property="Background" Value="#696390"/>
-        <Setter Property="Foreground" Value="#BFBCD4"/>
+        <Setter Property="Background" Value="#FFC8C8C8"/>
+        <Setter Property="Foreground" Value="#69717d"/>
         <Setter Property="FontSize" Value="20"/>
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="Template">
@@ -20,7 +20,7 @@
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="#7872a0"/>
+                            <Setter Property="Background" Value="#FFE4E4E4"/>
                             <Setter Property="Foreground" Value="White"/>
                             <Setter Property="Cursor" Value="Hand"/>
                         </Trigger>
