--- a/MW5 Mod Oganizer WPF/Themes/Button/ButtonStandaloneTheme.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/Button/ButtonStandaloneTheme.xaml
@@ -7,7 +7,7 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
-                        <Border CornerRadius="5" Background="{TemplateBinding Background}">
+                        <Border CornerRadius="0" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
                             <Grid VerticalAlignment="Stretch"
                               HorizontalAlignment="Stretch"
                               Background="Transparent">
@@ -22,17 +22,21 @@
                 </Setter.Value>
             </Setter>
             <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="Foreground" Value="#FFC8C3E8"/>
-            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Foreground" Value="#69717d"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
         </Style.Setters>
 
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="#FFABA7C3"/>
-                <Setter Property="Foreground" Value="White"/>
+                <Setter Property="Background" Value="#FFF5F5F5"/>
+                <Setter Property="BorderBrush" Value="#FFC8C8C8"/>
+                <Setter Property="BorderThickness" Value="1"/>
             </Trigger>
             <Trigger Property="IsPressed" Value="True">
-                <Setter Property="Background" Value="#FF736D9E"/>
+                <Setter Property="Background" Value="#FFE0E0E0"/>
+                <Setter Property="Foreground" Value="#FF4F545B"/>
+                <Setter Property="BorderBrush" Value="#FF323538"/>
             </Trigger>
         </Style.Triggers>
     </Style>
