--- a/MW5 Mod Oganizer WPF/Themes/Button/ButtonToolbarTheme.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/Button/ButtonToolbarTheme.xaml
@@ -7,33 +7,38 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
-                        <Border CornerRadius="0" Background="{TemplateBinding Background}">
+                        <Border CornerRadius="0" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
                             <Grid VerticalAlignment="Stretch"
-                              HorizontalAlignment="Stretch"
-                              Background="Transparent">
+                                  HorizontalAlignment="Stretch"
+                                  Background="Transparent">
 
                                 <TextBlock Text="{TemplateBinding Property=Content}"
                                            FontSize="12"
                                            VerticalAlignment="Center"
                                            HorizontalAlignment="Center"
-                                           Margin="5 5"/>
+                                           Margin="5 1"/>
                             </Grid>
                         </Border>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
             <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="Foreground" Value="#FFEEEAF3"/>
-            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Foreground" Value="#69717d"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
+            <Setter Property="Margin" Value="5"/>
         </Style.Setters>
 
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="#FF9994B5"/>
-                <Setter Property="Foreground" Value="White"/>
+                <Setter Property="Background" Value="#FFF5F5F5"/>
+                <Setter Property="BorderBrush" Value="#FFC8C8C8"/>
+                <Setter Property="BorderThickness" Value="1"/>
             </Trigger>
             <Trigger Property="IsPressed" Value="True">
-                <Setter Property="Background" Value="#FF514C6F"/>
+                <Setter Property="Background" Value="#FFE0E0E0"/>
+                <Setter Property="Foreground" Value="#FF4F545B"/>
+                <Setter Property="BorderBrush" Value="#FF323538"/>
             </Trigger>
         </Style.Triggers>
     </Style>
