--- a/MW5 Mod Oganizer WPF/Themes/TextBox/TextBoxTheme.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/TextBox/TextBoxTheme.xaml
@@ -5,13 +5,14 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
-                    <Border CornerRadius="5"
-                            Background="White"
+                    <Grid>
+                        <Border CornerRadius="5"
+                            Background="#FFF5F5F5"
                             Width="{Binding Width}"
                             Height="25">
-                        <Grid>
-                            <Rectangle StrokeThickness="1"/>
-                            <TextBox Margin="10, 0, 0, 0"
+                            <Grid>
+                                <Rectangle StrokeThickness="1"/>
+                                <TextBox Margin="10, 0, 0, 0"
                                      Text="{Binding Path=Text, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                      BorderThickness="0"
                                      Background="Transparent"
@@ -20,7 +21,7 @@
                                      FontSize="12"
                                      Foreground="#FF6F6F6F"
                                      x:Name="FilePathBox"/>
-                            <TextBlock IsHitTestVisible="False"
+                                <TextBlock IsHitTestVisible="False"
                                        Text="Choose a folder.."
                                        VerticalAlignment="Center"
                                        HorizontalAlignment="Left"
@@ -28,19 +29,20 @@
                                        FontSize="12"
                                        Foreground="#FFA2A2A2"
                                        Grid.Column="1">
-                                <TextBlock.Style>
-                                    <Style TargetType="{x:Type TextBlock}">
-                                        <Style.Triggers>
-                                            <DataTrigger Binding="{Binding Text, ElementName=FilePathBox}" Value="">
-                                                <Setter Property="Visibility" Value="Visible"/>
-                                            </DataTrigger>
-                                        </Style.Triggers>
-                                        <Setter Property="Visibility" Value="Hidden"/>
-                                    </Style>
-                                </TextBlock.Style>
-                            </TextBlock>
-                        </Grid>
-                    </Border>
+                                    <TextBlock.Style>
+                                        <Style TargetType="{x:Type TextBlock}">
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding Text, ElementName=FilePathBox}" Value="">
+                                                    <Setter Property="Visibility" Value="Visible"/>
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                            <Setter Property="Visibility" Value="Hidden"/>
+                                        </Style>
+                                    </TextBlock.Style>
+                                </TextBlock>
+                            </Grid>
+                        </Border>
+                    </Grid>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
