--- a/MW5 Mod Oganizer WPF/Themes/Button/ButtonStandaloneTheme.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/Button/ButtonStandaloneTheme.xaml
@@ -25,6 +25,7 @@
             <Setter Property="Foreground" Value="#69717d"/>
             <Setter Property="BorderThickness" Value="1"/>
             <Setter Property="BorderBrush" Value="Transparent"/>
+            <Setter Property="SnapsToDevicePixels" Value="True"/>
         </Style.Setters>
 
         <Style.Triggers>
