--- a/MW5 Mod Oganizer WPF/Themes/Button/ButtonToolbarTheme.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/Button/ButtonToolbarTheme.xaml
@@ -23,7 +23,7 @@
                 </Setter.Value>
             </Setter>
             <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="Foreground" Value="#69717d"/>
+            <Setter Property="Foreground" Value="#484D54"/>
             <Setter Property="BorderThickness" Value="1"/>
             <Setter Property="BorderBrush" Value="Transparent"/>
             <Setter Property="Margin" Value="5"/>
