--- a/MW5 Mod Oganizer WPF/Themes/TextBox/TextBoxTheme.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/TextBox/TextBoxTheme.xaml
@@ -6,7 +6,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
                     <Grid>
-                        <Border Background="White"
+                        <Border Background="#f7f5f2"
                                 Width="{Binding Width}"  
                                 Height="25">  
                             <Grid>
