--- a/MW5 Mod Oganizer WPF/Themes/UI/DeploymentReminder.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/UI/DeploymentReminder.xaml
@@ -7,14 +7,15 @@
             <Setter.Value>
                 <ControlTemplate>
                     <Border Height="30"
-                            Background="DeepSkyBlue">
+                            Background="#007FA6">
                         <TextBlock Text="You have made changes to your load order. Deployment is necessary to save your changes."
-                                   Foreground="White"
+                                   TextOptions.TextFormattingMode="Display"
                                    FontWeight="SemiBold"
+                                   Foreground="#f7f5f2"
                                    VerticalAlignment="Center"
                                    Margin="10 0 0 0"/>
                         <Border.Effect>
-                            <DropShadowEffect BlurRadius="10" Color="#FFD8D8D8" ShadowDepth="5" Direction="270" Opacity="0.3"/>
+                            <DropShadowEffect BlurRadius="10" Color="Black" ShadowDepth="5" Direction="270" Opacity="0.1"/>
                         </Border.Effect>
                     </Border>
                     <ControlTemplate.Triggers>
