Changed button name

--- a/MW5 Mod Oganizer WPF/MainWindow.xaml
+++ b/MW5 Mod Oganizer WPF/MainWindow.xaml
@@ -111,7 +111,7 @@
                         Click="ButtonClearPath_Click"
                         Command="{Binding ClearCommand}"
                         Style="{DynamicResource StandaloneButtonTheme}"/>
-                <Button Content="Reset to default load order"
+                <Button Content="Reset to defaults"
                         Height="25"
                         Margin="10 0 0 0"
                         Command="{Binding ResetToDefaultCommand}"
