Changed readonly of game version textbox depending if primary path is selected

--- a/MW5 Mod Oganizer WPF/MainWindow.xaml
+++ b/MW5 Mod Oganizer WPF/MainWindow.xaml
@@ -41,7 +41,7 @@
                          VerticalContentAlignment="Center"
                          HorizontalAlignment="Left"
                          VerticalAlignment="Center"
-                         IsReadOnly="False"
+                         IsReadOnly="True"
                          Style="{StaticResource TextBoxGameVersionTheme}">
                     <behaviors:Interaction.Triggers>
                         <behaviors:EventTrigger EventName="TextChanged">
